build local file download

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,6 +56,14 @@
             <i class="fa-solid fa-seedling mr-3"></i>Mongo
           </div></a
         >
+        <a
+          href="/ftp"
+          class="flex justify-center text-6xl border-2 border-gray-300 rounded-xl p-6 w-74 h-56 bg-sky-300 hover:bg-sky-500"
+        >
+          <div class="flex items-center mr-3">
+            <i class="fa-solid fa-folder-open mr-3"></i>Ftp
+          </div></a
+        >
       </div>
     </div>
   </body>
