--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,6 +64,14 @@
             <i class="fa-solid fa-folder-open mr-3"></i>Ftp
           </div></a
         >
+        <a
+          href="/code"
+          class="flex justify-center text-6xl border-2 border-gray-300 rounded-xl p-6 w-74 h-56 bg-violet-300 hover:bg-violet-500"
+        >
+          <div class="flex items-center mr-3">
+            <i class="fa-solid fa-file mr-3"></i>Code
+          </div></a
+        >
       </div>
     </div>
   </body>
