--- a/views/code/home.ejs
+++ b/views/code/home.ejs
@@ -14,7 +14,7 @@
                 >HTML CODE</label
               >
               <textarea
-                class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none resize-none"
+                class="form-control language-html block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none resize-none"
                 id="HtmlCode"
                 rows="8"
                 placeholder="<html>..</html>"
@@ -49,6 +49,14 @@
                 rows="8"
                 placeholder="Your script"
               ></textarea>
+              <textarea style="display: none" id="common">
+                (function () { var old = console.log; var logger =
+                parent.window.document.getElementById("log"); console.log = function
+                (message) { if (typeof message == "object") { logger.innerHTML
+                += (JSON && JSON.stringify ? JSON.stringify(message) : message)
+                + "<br />"; } else { logger.innerHTML += message + "<br />"; }
+                }; })();
+              </textarea>
             </div>
           </div>
           <button
@@ -67,10 +75,26 @@
                 class="form-label inline-block mb-2 text-gray-700"
                 >OUTPUT</label
               >
-              <iframe frameborder="0" id="Output"></iframe>
-              <code>
-                <div id="log"></div>
-              </code>
+              <div
+                class="w-full ml-5 mr-5 block h-3/5 border-2"
+                style="margin: 0 5px 0 5px"
+              >
+                <iframe
+                  id="Output"
+                  srcDoc=""
+                  title="output"
+                  frameBorder="1"
+                  width="100%"
+                  height="100%"
+                ></iframe>
+              </div>
+              <div
+                class="w-full ml-5 mr-5 block h-1/3 border-2 bg-gray-600 text-cyan-50"
+                style="margin: 0 5px 0 5px"
+                id="logger"
+              >
+                <pre id="log"></pre>
+              </div>
             </div>
           </div>
         </div>
@@ -91,36 +115,43 @@
         let Jscode = document.querySelector(".Editor #JsCode").value;
         localStorage.setItem("JsCookie", Jscode);
         let Output = document.querySelector(".OutputArea #Output");
+        // Output =          Output.contentWindow ||          Output.contentDocument.document ||           Output.contentDocument;
+        //Output.postMessage(Htmlcode + Csscode, "http://127.0.0.1:3000");
 
         Output.contentDocument.body.innerHTML = Htmlcode + Csscode;
-        Output.contentWindow.eval(Jscode);
+        // console.log(Output.contentWindow);
+        Output.contentWindow.eval(
+          Jscode + document.querySelector(".Editor #common").value
+        );
+        //Output.srcdoc = Htmlcode + Csscode;
 
         setTimeout(function () {
           show();
+          hljs.highlightAll();
         }, 2000);
       }
 
       document
         .querySelector(".Editor #HtmlCode")
-        .addEventListener("keyup", run);
+        .addEventListener("onblur", run);
       document
         .querySelector(".Editor #CssCode")
-        .addEventListener("keyup onblur", run);
-      document.querySelector(".Editor #JsCode").addEventListener("keyup", run);
+        .addEventListener("onblur", run);
+      document.querySelector(".Editor #JsCode").addEventListener("onblur", run);
 
       let show = function () {
-        var old = console.log;
-        var logger = document.getElementById("log");
+        // var old = console.log;
+        // var logger = document.getElementById("log");
 
-        console.log = function (message) {
-          if (typeof message == "object") {
-            logger.innerHTML +=
-              (JSON && JSON.stringify ? JSON.stringify(message) : message) +
-              "<br />";
-          } else {
-            logger.innerHTML += message + "<br />";
-          }
-        };
+        // console.log = function (message) {
+        //   if (typeof message == "object") {
+        //     logger.innerHTML +=
+        //       (JSON && JSON.stringify ? JSON.stringify(message) : message) +
+        //       "<br />";
+        //   } else {
+        //     logger.innerHTML += message + "<br />";
+        //   }
+        // };
 
         if (localStorage.getItem("HtmlCookie") != "") {
           document.querySelector(".Editor #HtmlCode").value =
