added formdata concept in node js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/tailwind.css" />
     <link rel="stylesheet" href="/fonts/css/all.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
     <!-- <script
       src="https://kit.fontawesome.com/21474fdc13.js"
       crossorigin="anonymous"
