file upload and retrive

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -5,8 +5,14 @@
   <title><%= title %></title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link rel="stylesheet" href="/stylesheets/tailwind.css" />
-  <link rel="stylesheet" href="/fonts/css/all.css" />
-  <link rel="stylesheet" href="/stylesheets/default.min.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+  <!-- <link rel="stylesheet" href="/fonts/css/all.css" /> -->
 
   <!-- <script
       src="https://kit.fontawesome.com/21474fdc13.js"
