--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -4,4 +4,7 @@
   >
     Custom Node JS API
   </div>
+  <a href="/" class="float-left mr-5 flex items-center">
+    <i class="fa-solid fa-house"></i>
+  </a>
 </nav>
