--- a/views/ftpview/ftpDocs.ejs
+++ b/views/ftpview/ftpDocs.ejs
@@ -4,62 +4,61 @@
   <body>
     <%- include('../includes/navbar.ejs') %>
     <div class="container mx-auto">
-      <a href="download/text.txt"><%= file %></a>
-      <br />
       <div class="grid grid-cols-6 gap-4">
-        <div class="col-start-2 col-span-4">
-          <!--
-  This example requires Tailwind CSS v2.0+ 
-  
-  This example requires some changes to your config:
-  
-  ```
-  // tailwind.config.js
-  module.exports = {
-    // ...
-    plugins: [
-      // ...
-      require('@tailwindcss/forms'),
-    ],
-  }
-  ```
--->
+        <div class="col-span-3">
+          <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
+            <div class="h-full overflow-auto">
+              <div class="grid grid-cols-3 gap-3 m-2">
+                <% for (item of file) { %>
+                <div class="p-6 bg-orange-100 text-center">
+                  <div class="flex items-start">
+                    <div class="flex items-center">
+                      <i class="fa-solid fa-file fa-3x"></i>
+                    </div>
+                    <div class="flex items-center p-3">
+                      <a
+                        href="download/<%= item %>"
+                        class="underline"
+                        style="word-break: break-all"
+                        ><%= item %>
+                        <span class="ml-2"
+                          ><i class="fa-solid fa-download"></i></span
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+                <% } %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-span-3">
           <div>
             <div class="md:grid md:grid-cols-3 md:gap-6">
-              <div class="md:col-span-1">
-                <div class="px-4 sm:px-0">
-                  <h3 class="text-lg font-medium leading-6 text-gray-900">
-                    Profile
-                  </h3>
-                  <p class="mt-1 text-sm text-gray-600">
-                    This information will be displayed publicly so be careful
-                    what you share.
-                  </p>
-                </div>
-              </div>
               <div class="mt-5 md:mt-0 md:col-span-2">
-                <form action="#" method="POST">
+                <form method="POST" enctype="multipart/form-data">
                   <div class="shadow sm:rounded-md sm:overflow-hidden">
                     <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
                       <div class="grid grid-cols-3 gap-6">
                         <div class="col-span-3 sm:col-span-2">
                           <label
-                            for="company-website"
+                            for="Your Name"
                             class="block text-sm font-medium text-gray-700"
                           >
-                            Website
+                            Name
                           </label>
                           <div class="mt-1 flex rounded-md shadow-sm">
                             <span
                               class="form-control inline-flex items-center px-3 rounded-l-md border border-gray-300 bg-gray-50 text-gray-500 text-sm"
                             >
-                              http://
+                              <span class="fa-solid fa-user"></span>
                             </span>
                             <input
+                              name="username"
                               type="text"
                               class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                              id="exampleFormControlInput1"
-                              placeholder="Example label"
+                              id="username"
+                              placeholder="Your Name"
                             />
                           </div>
                         </div>
@@ -78,6 +77,7 @@
                             id="exampleFormControlTextarea1"
                             rows="3"
                             placeholder="Your message"
+                            name="about"
                           ></textarea>
                         </div>
                         <p class="mt-2 text-sm text-gray-500">
@@ -88,7 +88,7 @@
 
                       <div>
                         <label class="block text-sm font-medium text-gray-700">
-                          Photo
+                          Profile Photo
                         </label>
                         <div class="mt-1 flex items-center">
                           <span
@@ -107,51 +107,69 @@
                           <input
                             class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
                             type="file"
-                            id="formFileMultiple"
-                            multiple
+                            id="formProfile"
+                            name="formProfile"
                           />
                         </div>
                       </div>
-                      <div>
+                      <div class="">
                         <label class="block text-sm font-medium text-gray-700">
-                          Check box
+                          Technology
                         </label>
-                        <div class="form-check">
-                          <input
-                            class="form-check-input h-4 w-4 border border-gray-300 rounded-sm bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
-                            type="checkbox"
-                            value=""
-                            id="flexCheckChecked"
-                          />
-                          <label
-                            class="form-check-label inline-block text-gray-800"
-                            for="flexCheckChecked"
-                          >
-                            Checked checkbox
-                          </label>
+                        <div class="flex items-start">
+                          <div class="form-check">
+                            <label
+                              class="form-check-label inline-block text-gray-800"
+                              for="fronend"
+                            >
+                              <input
+                                class="form-check-input h-4 w-4 border border-gray-300 rounded-sm bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
+                                type="checkbox"
+                                value="Y"
+                                id="fronend"
+                                name="fronend"
+                              />
+                              Front End
+                            </label>
+                          </div>
+                          <div class="form-check ml-5">
+                            <label
+                              class="form-check-label inline-block text-gray-800"
+                              for="backend"
+                              ><input
+                                class="form-check-input h-4 w-4 border border-gray-300 rounded-sm bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
+                                type="checkbox"
+                                value="R"
+                                id="backend"
+                                id="backend"
+                              />
+                              Back End
+                            </label>
+                          </div>
                         </div>
                       </div>
 
                       <div>
                         <label class="block text-sm font-medium text-gray-700">
-                          Select
+                          Framework
                         </label>
                         <div class="mb-3 xl:w-96">
                           <select
                             class="form-select block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                            aria-label="Default select example"
+                            aria-label="Choose One"
+                            name="framework"
                           >
-                            <option selected>Open this select menu</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option value="">Choose One</option>
+                            <option value="angular">Angular</option>
+                            <option value="django">Django</option>
+                            <option value="laravel">Laravel</option>
                           </select>
                         </div>
                       </div>
                       <div></div>
                       <div>
                         <label class="block text-sm font-medium text-gray-700">
-                          Cover photo
+                          Resume
                         </label>
                         <div
                           class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md"
@@ -173,21 +191,22 @@
                             </svg>
                             <div class="flex text-sm text-gray-600">
                               <label
-                                for="file-upload"
+                                for="fileupload"
                                 class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500"
                               >
                                 <span>Upload a file</span>
                                 <input
-                                  id="file-upload"
-                                  name="file-upload"
+                                  id="fileupload"
+                                  name="fileupload"
                                   type="file"
                                   class="sr-only"
+                                  multiple
                                 />
                               </label>
                               <p class="pl-1">or drag and drop</p>
                             </div>
                             <p class="text-xs text-gray-500">
-                              PNG, JPG, GIF up to 10MB
+                              PNG, JPG, PDF up to 10MB
                             </p>
                           </div>
                         </div>
@@ -198,7 +217,7 @@
                         type="submit"
                         class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
                       >
-                        Save
+                        Submit
                       </button>
                     </div>
                   </div>
