oracle and bulma css added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
           </div></a
         >
         <a
-          href="/data"
+          href="/oracle"
           class="flex justify-center text-6xl border-2 border-gray-300 rounded-xl p-6 w-74 h-56 bg-orange-200 hover:bg-orange-500"
         >
           <div class="flex items-center mr-3">
