--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -2,6 +2,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link type="image/png" sizes="96x96" rel="icon" href="/icons8-green-96.ico" />
+  <!-- <link rel="icon" href="Synapse.ico" type="image/x-icon" /> -->
   <title><%= title %></title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link rel="stylesheet" href="/stylesheets/tailwind.css" />
