--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,6 +76,14 @@
             <i class="fa-solid fa-file mr-3"></i>Code
           </div></a
         >
+        <a
+          href="/stream"
+          class="flex justify-center text-6xl border-2 border-gray-300 rounded-xl p-6 w-74 h-56 bg-teal-300 hover:bg-teal-500"
+        >
+          <div class="flex items-center mr-3">
+            <i class="fa-solid fa-play mr-3"></i>Stream
+          </div></a
+        >
       </div>
     </div>
   </body>
